[package]
name = "crypto_tracking"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.4"
crossterm = "0.29.0"
rand = "0.9.1"
ratatui = "0.29.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = {version = "1.44.2", features = ["full"]}
